@@ -27,6 +27,7 @@
 | Release Max v0.3.32-alpha |
 +---------------------------+
 
+2007-01-17  Admin       Feature     Fixed #36, refs #37 - Some improvements to the channel ACL plugin (Chris)
 2007-01-15  Admin       Bug         Fixed #2 - All advertisers are shown as inactive (Chris)
 2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)
 2007-01-05  DAL         Feature     Fixed #10 - Improved DAL to use IN format SQL for performance (Andrew)
